Apparently the windows shell removes quotes from the commandline args. This caused the interpreter to malfunction on windows. This is now fixed.